--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Freehand&display=swap" rel="stylesheet">
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <style>
+      body{
+        background-color: white;
+      }
+    </style>
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -32,7 +37,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body className="bg-white">
     <script src="https://cdn.lordicon.com/qjzruarw.js"></script>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
