--- a/public/index.html
+++ b/public/index.html
@@ -37,11 +37,11 @@
     -->
     <title>Calypso Shipping</title>
   </head>
-  <body className="bg-white">
+  <body>
     <script src="https://cdn.lordicon.com/qjzruarw.js"></script>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div className="bg-white" id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
