--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     -->
     <title>Calypso Shipping</title>
   </head>
-  <body>
+  <body class="scrollbar" id="scrollbar-custom">
     <script src="https://cdn.lordicon.com/qjzruarw.js"></script>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
