--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Calypso Shipping family-oriented business formed to make online shopping and shipping to Jamaica a happy and hassle-free experience.">
-    <meta name="keywords" content="Calypso, Shipping, Kingston, Calypso Shipping, Jamaica, Calypso Jamaica">
-    <meta name="author" content="Tevin Edwards">
+    <meta name="description" content="Calypso Shipping family-oriented business formed to make online shopping and shipping to Jamaica a happy and hassle-free experience."/>
+    <meta name="keywords" content="Calypso, Shipping, Kingston, Calypso Shipping, Jamaica, Calypso Jamaica"/>
+    <meta name="author" content="Tevin Edwards"/>
     <script src="https://kit.fontawesome.com/13ca99f749.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" type="image/x-icon" href="https://csvc.blob.core.windows.net/images/2cd48f33-640b-4f66-83a1-79d8c1cda65a.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Freehand&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Freehand&display=swap" rel="stylesheet">
     <style>
       body{
         background-color: white;
