--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Calypso Shipping family-oriented business formed to make online shopping and shipping to Jamaica a happy and hassle-free experience."/>
-    <meta name="keywords" content="Calypso, Shipping, Kingston, Calypso Shipping, Jamaica, Calypso Jamaica"/>
-    <meta name="author" content="Tevin Edwards"/>
     <script src="https://kit.fontawesome.com/13ca99f749.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" type="image/x-icon" href="https://csvc.blob.core.windows.net/images/2cd48f33-640b-4f66-83a1-79d8c1cda65a.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,6 +15,18 @@
         scroll-behavior: smooth;
       }
     </style>
+    <meta 
+      name="description" 
+      content="Calypso Shipping family-oriented business formed to make online shopping and shipping to Jamaica a happy and hassle-free experience."
+    />
+    <meta 
+      name="keywords" 
+      content="Calypso, Shipping, Kingston, Calypso Shipping, Jamaica, Calypso Jamaica"
+    />
+    <meta 
+      name="author" 
+      content="LorenzoDGreat"
+    />
     <link rel="apple-touch-icon" href="https://csvc.blob.core.windows.net/images/2cd48f33-640b-4f66-83a1-79d8c1cda65a.png" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
