--- a/public/index.html
+++ b/public/index.html
@@ -15,18 +15,19 @@
         scroll-behavior: smooth;
       }
     </style>
+
     <meta 
       name="description" 
       content="Calypso Shipping family-oriented business formed to make online shopping and shipping to Jamaica a happy and hassle-free experience."
     />
-    <!-- <meta 
+    <meta 
       name="keywords" 
       content="Calypso, Shipping, Kingston, Calypso Shipping, Jamaica, Calypso Jamaica"
     />
     <meta 
       name="author" 
       content="LorenzoDGreat"
-    /> -->
+    />
     <link rel="apple-touch-icon" href="https://csvc.blob.core.windows.net/images/2cd48f33-640b-4f66-83a1-79d8c1cda65a.png" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
