--- a/react/index.html
+++ b/react/index.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <script src="https://kit.fontawesome.com/13ca99f749.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="https://csvc.blob.core.windows.net/images/2cd48f33-640b-4f66-83a1-79d8c1cda65a.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Freehand&display=swap" rel="stylesheet">
+    <meta 
+      name="description" 
+      content="Calypso Shipping family-oriented business formed to make online shopping and shipping to Jamaica a happy and hassle-free experience."
+    />
+    <meta 
+      name="keywords" 
+      content="Calypso, Shipping, Kingston, Calypso Shipping, Jamaica, Calypso Jamaica"
+    />
+    <meta 
+      name="author" 
+      content="LorenzoDGreat"
+    />
+    <link rel="apple-touch-icon" href="https://csvc.blob.core.windows.net/images/2cd48f33-640b-4f66-83a1-79d8c1cda65a.png" />
     <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.3.0/css/all.css">
-  <title>Vite + React</title>
+  <title>Calypso Shipping</title>
   </head>
   <body>
     <div id="root"></div>
